# AI-Agent

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  rag.py
coverletters/: facebook1.txt  google1.txt  google2.txt  google3.txt  sample1.txt  sample2.txt  sample3.txt  sample4.txt  sample5.txt
rag/: configs.py  models.py  output.py  rag.py  store.py  templates.py
